# football_league

./: docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: server.py
backend/app/helpers/: helpers.py
backend/app/mongodb/: docker-compose.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/conf/: default.conf
frontend/src/: App.js  data.json  index.css
frontend/src/components/: StandingTable.js
frontend/src/components/createleague/: LeagueForm.js
frontend/src/components/leaguedropdown/: LeagueDropdown.js
frontend/src/components/match/: Match.css  Match.js
frontend/src/components/matchday/: Matchday.js
frontend/src/components/matchedit/: MatchEdit.js
frontend/src/components/navbar/: NavBar.js
frontend/src/components/standingstable/: StandingTable.js
frontend/src/pages/: CreateLeague.js  Home.js  League.js  Standings.js
frontend/src/services/: MatchService.js
frontend/src/styles/app/: App.css
frontend/src/styles/leagueform/: LeagueForm.css
frontend/src/styles/match/: Match.css
frontend/src/styles/matchday/: Matchday.css
frontend/src/styles/standingtable/: StandingTable.css
