[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pablo-Gallardo <Pablo.Gallardo@kyndryl.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
pymongo = "^4.5.0"
competitions-scheduler = "^0.2.5.post2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
